Forgot and change password components

--- a/src/app/auth/profile/components/change-password/change-password.component.html
+++ b/src/app/auth/profile/components/change-password/change-password.component.html
@@ -38,12 +38,18 @@
 						</button>
 					</div>
 
-					<p class="invalid-feedback" *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
 				</form>
 
-				<div *ngIf="success">
-					<p><strong>Change successful!</strong> Your password has been updated..</p>
-				</div>
+				<app-alert type="error" *ngIf="error">
+					<h5>{{error}}</h5>
+				</app-alert>
+
+				<app-alert type="success" title="Password changed successfully" *ngIf="success">
+					<h5>Your password has been updated.</h5>
+				</app-alert>
+
+				<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+
 			</div>
 
 
