--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -9,27 +9,39 @@
 		<div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
 
 			<mat-card style="padding: 30px;">
-				<h1 class="gd-primary">Password reset</h1>
-				<h4 class="gd-secondary" *ngIf="!success">Enter your email address to receive an email containing a link to reset your password.</h4>
+				<h1 class="gd-primary">Choose a new password</h1>
+				<h4>Enter a new password for your account.</h4>
 				<br/>
 
-				<app-alert type="success" title="Password reset requested" *ngIf="success" [dismissible]="false">
-					<h5>If this account exists, you will receive an email with a link to reset your password.
-						<br/>
-						<br/>Please click the link in the email you received to choose a new passoword<br/>
-						<strong>(Also check your spam folder)</strong></h5>
+				<app-alert type="success" title="Password reset complete!" *ngIf="success" [dismissible]="false">
+					<h5>You can now log in with your new password</h5>
+					<button class="btn btn-success" routerLink="/login">
+						Continue
+					</button>
 				</app-alert>
 
 				<div class="alert alert-gd-1" style="margin: 0 0 15px 0;" *ngIf="!success">
+
 					<div>
+
 						<form *ngIf="!success" [formGroup]="loginForm" (ngSubmit)="environment.production==true?captchaRef.execute():sendRequest()">
+
 							<div class="form-group">
-								<label for="mail">Enter your email address</label>
-								<input autocomplete="email" type="text" formControlName="mail" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.mail.errors }" placeholder="Enter your email address"/>
-								<div *ngIf="submitted && f.mail.errors" class="invalid-feedback">
-									<div *ngIf="f.mail.errors.required">Email address is required</div>
+								<label for="password">New password</label>
+								<input autocomplete="off" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Enter a new password" />
+								<div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+									<div *ngIf="f.password.errors.required">Password is required</div>
 								</div>
 							</div>
+
+							<div class="form-group">
+								<label for="password2">New password confirmation</label>
+								<input autocomplete="off" type="password" formControlName="password2" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password2.errors }" placeholder="Enter the new password again"/>
+								<div *ngIf="submitted && f.password2.errors" class="invalid-feedback">
+									<div *ngIf="f.password2.errors.required">Password verification is required</div>
+								</div>
+							</div>
+
 							<div class="form-group">
 								<button [disabled]="loading" class="btn btn-primary">
 									<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
@@ -37,11 +49,12 @@
 								</button>
 							</div>
 
-							<mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
-
-							<p class="invalid-feedback" *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
+							<app-alert type="error" *ngIf="error">
+								<h5>{{error}}</h5>
+							</app-alert>
 							<a *ngIf="error!=''" routerLink="/register">Register for a new account</a>
 						</form>
+
 					</div>
 
 
