--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -6,8 +6,8 @@
 
 }
 .footer-background {
-  //background-color: #f5f5f5;
-  background-color: red;
+  background-color: #f5f5f5;
+  //background-color: red;
 }
 
 .height-0 {
