--- a/src/app/auth/profile/components/intel/intel.component.scss
+++ b/src/app/auth/profile/components/intel/intel.component.scss
@@ -1,4 +1,8 @@
-
+.top-index-cards {
+  background: #f3f3f3 !important;
+  color: #334254 !important;
+  border: 1px solid #18bc9c;
+}
 
 .loading-overlay {
   opacity: 0.2;
