--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,7 +39,7 @@
     <li><a (click)="routing('/points')" routerLink="/points" routerLinkActive="active">SCOREBOARD</a></li>
     <li><a (click)="routing('/compare')" routerLink="/points" routerLinkActive="active">COMPARE</a></li>
     <li><a (click)="routing('/ranking')" routerLink="/ranking" routerLinkActive="active">RANKINGS</a></li>
-    <li><a (click)="routing('/indexer/0')" routerLink="/indexer/0" routerLinkActive="active">CITY INDEXER</a></li>
+    <li><a (click)="openIndexer()" routerLink="/indexer/0" routerLinkActive="active">CITY INDEXER</a></li>
     <li><a (click)="headerContact()">CONTACT</a></li>
   </ul>
 </div>
